--- a/public/members.html
+++ b/public/members.html
@@ -1,37 +1,278 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <title>Austin Bats</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="../css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="../css/styles.css">
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
+
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper orange">
+        <ul id="nav-mobile" class="hide-on-med-and-down">
+          <li><a class="headerText" href="#weather">See Them Fly</a></li>
+          <li><a class="headerText" href="#about">About</a></li>
+          <li><a class="headerText" href="#shop">Shop</a></li>
+          <li><a class="headerText" href="#instagram">Photos</a></li>
+          <li><a class="headerText" href="#after">Nearby</a></li>
+          <li><a class="headerText" href="#donate">Donate</a></li>
+          <li><a class="headerText" href="#blog">Blog</a></li>
+        </ul>
+        <div class="progress">
+    <div class="determinate" style="width: 70%"></div>
+</div>
       </div>
-    </div>
-  </nav>
-  <div class="container">
+    </nav>
+  </div>
+
+  <div class="container valign-wrapper" id="mainContainer">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
+      <div class="col s12 m12">
+        <h1 class="center-align white-text" id="mainHeaderText">Hello, Bat Lover.</h1>
+</div>
+<div class="col s12 m12">
+        <h4 class="center-align white-text" id="headerSubText">Lets find out when the best time to see the bats is. </h4>
+      </div>
+
+      <div class="col s12 m3 mainButtons push-m4">
+        <a class="waves-effect waves-light btn left introButton  center z-depth-5" href="#shop">Shop</a>
+      </div>
+      <div class="col s12 m3 mainButtons push-m3">
+        <a class="waves-effect waves-light btn left introButton  center z-depth-5" href="#join">Join</a>
+      </div>
+  </div>
+</div>
+
+  <div class="container weatherBox section scrollspy orange" id="weather">
+    <div class=" white z-depth-5 weatherSubBox">
+      <h3 class="center" id="weatherHeader">Todays Estimated Flight Time</h3>
+      <p class="center" id="todaysFlight">calculated flight time here</p>
+      <h5 class="center">Weather</h5>
+      <div class="weatherTable">
+        <table class="centered">
+          <thead>
+            <tr>
+              <th>Today</th>
+              <th>Date 2</th>
+              <th>Date 3</th>
+              <th>Date 4</th>
+              <th>Date 5</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td id="sunsetTime"></td>
+              <td id="tempAtSunset"></td>
+              <td id="rainAtSunset"></td>
+              <td id="cloudsAtSunset"></td>
+              <td id="windAtSunset"></td>
+            </tr>
+            <tr>
+              <td id="fligthEstimate2"></td>
+              <td id="sunsetTimeDay2"></td>
+              <td id="tempAtSunsetDay2"></td>
+              <td id="rainAtSunsetDay2"></td>
+              <td id="cloudsAtSunsetDay2"></td>
+              <td id="windAtSunsetDay2"></td>
+            </tr>
+            <tr>
+              <td id="fligthEstimate3"></td>
+              <td id="sunsetTimeDay3"></td>
+              <td id="tempAtSunsetDay3"></td>
+              <td id="rainAtSunsetDay3"></td>
+              <td id="cloudsAtSunsetDay3"></td>
+              <td id="windAtSunsetDay3"></td>
+            </tr>
+
+            <tr>
+              <td id="fligthEstimate4"></td>
+              <td id="sunsetTimeDay4"></td>
+              <td id="tempAtSunsetDay4"></td>
+              <td id="rainAtSunsetDay4"></td>
+              <td id="cloudsAtSunsetDay4"></td>
+              <td id="windAtSunsetDay4"></td>
+            </tr>
+
+            <tr>
+              <td id="fligthEstimate5"></td>
+              <td id="sunsetTimeDay5"></td>
+              <td id="tempAtSunsetDay5"></td>
+              <td id="rainAtSunsetDay5"></td>
+              <td id="cloudsAtSunsetDay5"></td>
+              <td id="windAtSunsetDay5"></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/members.js"></script>
+  <div class="container z-depth-5 section scrollspy infoContainer" id="about">
+    <h3 class="center">Viewing Information</h3>
+    <div class="row aboutCards">
+      <div class="col s12 m12">
+        <div class="card teal darken-1 infoCard1 z-depth-5">
+          <div class="card-content white-text">
+            <span class="card-title">Location</span>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6892.021786437301!2d-97.75063147440693!3d30.265270827209868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b5064fff0741%3A0xc70811548b9aecff!2sCongress+Avenue+Bridge!5e0!3m2!1sen!2sus!4v1502498894240"
+              width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
+          <p class="white-text center parkingText">Parking Information: We reccomend parking at the Austin American Statesman. Pay for parking using the parking lot app (www.parkmobile.com). Entering parking zone number 2101 to pay for a space.</p>
+        </div>
+      </div>
+    </div>
 
+  </div>
+
+
+
+  <div class="container white shopContainer section scrollspy valign-wrapper" id="shop">
+    <div class="row">
+    <h3 class="center">SHOP</h3>
+    <div class="shopItems">
+        <div class="col s12 m3">
+          <div class="card z-depth-5 hoverable">
+            <div class="card-image">
+              <img class="shopImage" src="../images/shirt.jpg">
+            </div>
+            <div class="card-content">
+              <h6>Womens Bat Shirt</h6>
+              <p>Price: $12.99</p>
+            </div>
+            <div class="card-action">
+              <a href="#">Buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m3">
+          <div class="card z-depth-5 hoverable">
+            <div class="card-image">
+              <img class="shopImage" src="../images/shirt.jpg">
+            </div>
+            <div class="card-content">
+              <h6>Womens Bat Shirt</h6>
+              <p>Price: $12.99</p>
+            </div>
+            <div class="card-action">
+              <a href="#">Buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m3">
+          <div class="card z-depth-5 hoverable">
+            <div class="card-image">
+              <img class="shopImage" src="../images/shirt.jpg">
+            </div>
+            <div class="card-content">
+              <h6>Womens Bat Shirt</h6>
+              <p>Price: $12.99</p>
+            </div>
+            <div class="card-action">
+              <a href="#">Buy</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m3">
+          <div class="card z-depth-5 hoverable">
+            <div class="card-image">
+              <img class="shopImage" src="../images/shirt.jpg">
+            </div>
+            <div class="card-content">
+              <h6>Womens Bat Shirt</h6>
+              <p>Price: $12.99</p>
+            </div>
+            <div class="card-action">
+              <a href="#">Buy</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container instagramContainer teal section scrollspy" id="instagram">
+    <div class="row">
+      <div class="col s12 m12">
+    <h4 class="center white-text">BATS of Instagram</h4>
+    <div class="carousel">
+      <a class="carousel-item" href="#one!"><img src="../images/batinsta.jpg"></a>
+      <a class="carousel-item" href="#two!"><img src="../images/batinsta.jpg"></a>
+      <a class="carousel-item" href="#three!"><img src="../images/batinsta.jpg"></a>
+      <a class="carousel-item" href="#four!"><img src="../images/batinsta.jpg"></a>
+      <a class="carousel-item" href="#five!"><img src="../images/batinsta.jpg"></a>
+    </div>
+  </div>
+  </div>
+  </div>
+  <div class="donationContainer valign-wrapper">
+    <div class="row">
+      <div class="col s12 m12">
+        <div class="card-panel orange donationPannel">
+          <div class="conservationImage section scrollspy" id="donate">
+            <img class="responsive-img" id="batOrgImage" src="../images/batcharity1.png" alt="donatImage">
+          </div>
+          <h5 class="white-text center">"The mission of Bat Conservation International is to conserve the world’s bats and their ecosystems to ensure a healthy planet."</h5>
+          <br>
+          <p class="white-text center">BCI is dedicated to the enduring protection of the world’s 1300+ species of bats and their habitats and creating a world in which bats and humans successfully coexist. In pursuit of this vision, during the next five years BCI will work worldwide
+            at scale with local, regional, national and multinational public and private partners to respond rapidly and effectively to bat conservation crises, preventing the extinction of threatened bats and the extirpation of globally significant populations
+            of bats
+          </p>
+          <br>
+          <br>
+          <div class="col s12 m12 center donationButton">
+            <a class="waves-effect waves-light btn-large hoverabel" target="_blank" href="https://www.batcon.org/index.php?option=com_content&view=article&layout=edit&id=1056
+">Donate Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <footer class="page-footer orange">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">#austinbats</h5>
+          <p class="grey-text text-lighten-4"></p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text"></h5>
+          <ul class="right hide-on-med-and-down">
+            <li><a class="grey-text text-lighten-4" href="">Home</a></li>
+            <li><a class="grey-text text-lighten-4" href="#shop">Shop</a></li>
+            <li><a class="grey-text text-lighten-4" href="#weather">See the bats</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2017 Copyright
+        <a class="grey-text text-lighten-4 right" target="_blank" href="https://www.batcon.org/index.php?option=com_content&view=article&layout=edit&id=1056">Donate</a>
+      </div>
+    </div>
+  </footer>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="../js/materialize.min.js"></script>
+  <script type="text/javascript" src="../js/script.js"></script>
+  <script>
+    $(".button-collapse").sideNav();
+    $(document).ready(function() {
+      $('.carousel').carousel();
+    });
+    $(document).ready(function() {
+      $('.scrollspy').scrollSpy();
+    });
+  </script>
 </body>
 
 </html>
