--- a/public/members.html
+++ b/public/members.html
@@ -5,8 +5,8 @@
   <title>Austin Bats</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="../css/styles.css">
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="css/styles.css">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -26,8 +26,8 @@
           <li><a class="headerText" href="#blog">Blog</a></li>
         </ul>
         <div class="progress">
-    <div class="determinate" style="width: 70%"></div>
-</div>
+          <div class="determinate" style="width: 70%"></div>
+        </div>
       </div>
     </nav>
   </div>
@@ -36,8 +36,8 @@
     <div class="row">
       <div class="col s12 m12">
         <h1 class="center-align white-text" id="mainHeaderText">Hello, Bat Lover.</h1>
-</div>
-<div class="col s12 m12">
+      </div>
+      <div class="col s12 m12">
         <h4 class="center-align white-text" id="headerSubText">Lets find out when the best time to see the bats is. </h4>
       </div>
 
@@ -47,8 +47,8 @@
       <div class="col s12 m3 mainButtons push-m3">
         <a class="waves-effect waves-light btn left introButton  center z-depth-5" href="#join">Join</a>
       </div>
+    </div>
   </div>
-</div>
 
   <div class="container weatherBox section scrollspy orange" id="weather">
     <div class=" white z-depth-5 weatherSubBox">
@@ -135,12 +135,12 @@
 
   <div class="container white shopContainer section scrollspy valign-wrapper" id="shop">
     <div class="row">
-    <h3 class="center">SHOP</h3>
-    <div class="shopItems">
+      <h3 class="center">SHOP</h3>
+      <div class="shopItems">
         <div class="col s12 m3">
           <div class="card z-depth-5 hoverable">
             <div class="card-image">
-              <img class="shopImage" src="../images/shirt.jpg">
+              <img class="shopImage" src="images/shirt.jpg">
             </div>
             <div class="card-content">
               <h6>Womens Bat Shirt</h6>
@@ -154,7 +154,7 @@
         <div class="col s12 m3">
           <div class="card z-depth-5 hoverable">
             <div class="card-image">
-              <img class="shopImage" src="../images/shirt.jpg">
+              <img class="shopImage" src="images/shirt.jpg">
             </div>
             <div class="card-content">
               <h6>Womens Bat Shirt</h6>
@@ -168,7 +168,7 @@
         <div class="col s12 m3">
           <div class="card z-depth-5 hoverable">
             <div class="card-image">
-              <img class="shopImage" src="../images/shirt.jpg">
+              <img class="shopImage" src="images/shirt.jpg">
             </div>
             <div class="card-content">
               <h6>Womens Bat Shirt</h6>
@@ -182,7 +182,7 @@
         <div class="col s12 m3">
           <div class="card z-depth-5 hoverable">
             <div class="card-image">
-              <img class="shopImage" src="../images/shirt.jpg">
+              <img class="shopImage" src="images/shirt.jpg">
             </div>
             <div class="card-content">
               <h6>Womens Bat Shirt</h6>
@@ -201,23 +201,23 @@
   <div class="container instagramContainer teal section scrollspy" id="instagram">
     <div class="row">
       <div class="col s12 m12">
-    <h4 class="center white-text">BATS of Instagram</h4>
-    <div class="carousel">
-      <a class="carousel-item" href="#one!"><img src="../images/batinsta.jpg"></a>
-      <a class="carousel-item" href="#two!"><img src="../images/batinsta.jpg"></a>
-      <a class="carousel-item" href="#three!"><img src="../images/batinsta.jpg"></a>
-      <a class="carousel-item" href="#four!"><img src="../images/batinsta.jpg"></a>
-      <a class="carousel-item" href="#five!"><img src="../images/batinsta.jpg"></a>
+        <h4 class="center white-text">BATS of Instagram</h4>
+        <div class="carousel">
+          <a class="carousel-item" href="#one!"><img src="images/batinsta.jpg"></a>
+          <a class="carousel-item" href="#two!"><img src="images/batinsta.jpg"></a>
+          <a class="carousel-item" href="#three!"><img src="images/batinsta.jpg"></a>
+          <a class="carousel-item" href="#four!"><img src="images/batinsta.jpg"></a>
+          <a class="carousel-item" href="#five!"><img src="images/batinsta.jpg"></a>
+        </div>
+      </div>
     </div>
-  </div>
-  </div>
   </div>
   <div class="donationContainer valign-wrapper">
     <div class="row">
       <div class="col s12 m12">
         <div class="card-panel orange donationPannel">
           <div class="conservationImage section scrollspy" id="donate">
-            <img class="responsive-img" id="batOrgImage" src="../images/batcharity1.png" alt="donatImage">
+            <img class="responsive-img" id="batOrgImage" src="images/batcharity1.png" alt="donatImage">
           </div>
           <h5 class="white-text center">"The mission of Bat Conservation International is to conserve the world’s bats and their ecosystems to ensure a healthy planet."</h5>
           <br>
@@ -262,8 +262,9 @@
     </div>
   </footer>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="../js/materialize.min.js"></script>
-  <script type="text/javascript" src="../js/script.js"></script>
+
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/members.js"></script>
   <script>
     $(".button-collapse").sideNav();
     $(document).ready(function() {
