--- a/public/members.html
+++ b/public/members.html
@@ -45,7 +45,7 @@
         <a class="waves-effect waves-light btn left introButton  center z-depth-5" href="#shop">Shop</a>
       </div>
       <div class="col s12 m3 mainButtons push-m3">
-        <a class="waves-effect waves-light btn left introButton  center z-depth-5" href="#join">Join</a>
+        <a class="waves-effect waves-light btn left introButton  center z-depth-5" href="../signup.html">Join</a>
       </div>
     </div>
   </div>
