--- a/public/signup.html
+++ b/public/signup.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar-fixed">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
