--- a/public/signup.html
+++ b/public/signup.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar-fixed">
     <div class="container-fluid">
       <div class="navbar-header">
       </div>
@@ -21,24 +21,26 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
+        <h2>Sign for Our News letter!</h2>
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <label for="firstname">First Name</label>
+            <input type="text" class="form-control" id="name1-input" placeholder="First Name">
+          </div>
+          <div class="form-group">
+            <label for="lastname">Last Name</label>
+            <input type="text" class="form-control" id="name2-input" placeholder="Last Name">
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <i class="materials-icon" aria-hidden="true">error</i>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
-        <br />
-        <p>Or log in <a href="../login.html">here</a></p>
       </div>
     </div>
   </div>
@@ -47,25 +49,6 @@
   <script type="text/javascript" src="js/materialize.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
 
-<!-- <script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '356328014802886',
-      cookie     : true,
-      xfbml      : true,
-      version    : 'v2.8'
-    });
-    FB.AppEvents.logPageView();
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script> -->
 
 </body>
 
