--- a/public/members.html
+++ b/public/members.html
@@ -52,62 +52,40 @@
 
   <div class="container weatherBox section scrollspy orange" id="weather">
     <div class=" white z-depth-5 weatherSubBox">
-      <h3 class="center" id="weatherHeader">Todays Estimated Flight Time</h3>
-      <p class="center" id="todaysFlight">calculated flight time here</p>
+      <h3 class="center" id="weatherHeader">Forecast</h3>
+      <p class="center" id="todaysFlight">Forecast for the next three days</p>
       <h5 class="center">Weather</h5>
       <div class="weatherTable">
         <table class="centered">
           <thead>
             <tr>
               <th>Today</th>
-              <th>Date 2</th>
-              <th>Date 3</th>
-              <th>Date 4</th>
-              <th>Date 5</th>
+              <th>tomorrow</th>
+              <th>Two Days from now</th>
             </tr>
           </thead>
 
           <tbody>
             <tr>
-              <td id="sunsetTime"></td>
-              <td id="tempAtSunset"></td>
-              <td id="rainAtSunset"></td>
-              <td id="cloudsAtSunset"></td>
-              <td id="windAtSunset"></td>
+              <td id="todayInfo"></td>
+              <td id="tomorrowInfo"></td>
+              <td id="twoDayInfo"></td>
             </tr>
             <tr>
-              <td id="fligthEstimate2"></td>
-              <td id="sunsetTimeDay2"></td>
-              <td id="tempAtSunsetDay2"></td>
-              <td id="rainAtSunsetDay2"></td>
-              <td id="cloudsAtSunsetDay2"></td>
-              <td id="windAtSunsetDay2"></td>
+              <td id="todayInfo2"></td>
+              <td id="tomorrowInfo2"></td>
+              <td id="twoDayInfo2"></td>
             </tr>
             <tr>
-              <td id="fligthEstimate3"></td>
-              <td id="sunsetTimeDay3"></td>
-              <td id="tempAtSunsetDay3"></td>
-              <td id="rainAtSunsetDay3"></td>
-              <td id="cloudsAtSunsetDay3"></td>
-              <td id="windAtSunsetDay3"></td>
+              <td id="todayInfo3"></td>
+              <td id="tomorrowInfo3"></td>
+              <td id="twoDayInfo3"></td>
             </tr>
 
             <tr>
-              <td id="fligthEstimate4"></td>
-              <td id="sunsetTimeDay4"></td>
-              <td id="tempAtSunsetDay4"></td>
-              <td id="rainAtSunsetDay4"></td>
-              <td id="cloudsAtSunsetDay4"></td>
-              <td id="windAtSunsetDay4"></td>
-            </tr>
-
-            <tr>
-              <td id="fligthEstimate5"></td>
-              <td id="sunsetTimeDay5"></td>
-              <td id="tempAtSunsetDay5"></td>
-              <td id="rainAtSunsetDay5"></td>
-              <td id="cloudsAtSunsetDay5"></td>
-              <td id="windAtSunsetDay5"></td>
+              <td id="todayInfo4"></td>
+              <td id="tomorrowInfo4"></td>
+              <td id="twoDayInfo4"></td>
             </tr>
           </tbody>
         </table>
