--- a/public/members.html
+++ b/public/members.html
@@ -52,9 +52,9 @@
     </div>
   </div>
 
-  <div class="container weatherBox section scrollspy orange" id="weather">
-    <div class=" white z-depth-5 weatherSubBox">
-      <h3 class="center" id="weatherHeader">Forecast</h3>
+  <div class="container  weatherBox section scrollspy orange" id="weather">
+    <div class="orange z-depth-5 weatherSubBox">
+      <h3 class="center orange" id="weatherHeader">Forecast</h3>
       <p class="center" id="todaysFlight">Forecast for the next three days</p>
       <h5 class="center">Weather</h5>
       <div class="weatherTable">
@@ -67,7 +67,7 @@
             </tr>
           </thead>
 
-          <tbody>
+          <tbody id="tempBody">
             <tr>
               <td id="todayInfo"></td>
               <td id="tomorrowInfo"></td>
