--- a/public/shop.html
+++ b/public/shop.html
@@ -33,21 +33,17 @@
     </nav>
   </div>
 
-  <div class="container valign-wrapper" id="mainContainer">
-    <div class="row">
-      <div class="col s12 m12">
+  <div class="wrapper" id="mainContainer">
+      <div class="one">
         <h1 class="center-align white-text" id="mainHeaderText2">Welcome to the store</h1>
       </div>
-      <div class="col s12 m12">
+      <div class="three">
         <h4 class="center-align white-text" id="headerSubText2">Show your love for the bats by purchasing one of our bespoke t-shirts </h4>
       </div>
-      <div class="col s12 m12">
+      <div class="two">
         <canvas id="canvas1"></canvas>
       </div>
-
     </div>
-  </div>
-
 
   <div class="container shopBox">
   <div class="container shopContainer section scrollspy valign-wrapper" id="shop">
