--- a/public/members.html
+++ b/public/members.html
@@ -146,69 +146,13 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-    <div class="container shopContainer section scrollspy valign-wrapper" id="shop">
+]    <div class="container shopContainer section scrollspy valign-wrapper" id="shop">
       <div class="row products2">
         <div class="col s12 m12">
-        <h3 class="center black-text">Help Us Pay Rent!</h3>
+        <h3 class="center white-text">Help Us Pay Rent!</h3>
       </div>
         <div class="products" id="target">
-          <!-- <div class="col s6 m3">
-            <div class="card z-depth-5 hoverable shopItems">
-              <div class="card-image">
-                <img class="shopImage" src="images/shirt.jpg">
-              </div>
-              <div class="card-content">
-                <h6>Womens Bat Shirt</h6>
-                <p>Price: $20.00</p>
-              </div>
-              <div class="card-action">
-                <button class="snipcart-add-item" data-item-id="1" data-item-name="Bat Shirt" data-item-price="20.00" data-item-custom2-name="Size" data-item-custom2-options="Small|Medium|Large|XL" data-item-url="http://myapp.com/products/bacon" data-item-description="T-Shirt With Bats On It">
-        Buy
-</button>
-              </div>
-            </div>
-          </div>
-          <div class="col s6 m3">
-            <div class="card z-depth-5 hoverable">
-              <div class="card-image">
-                <img class="shopImage" src="images/shirt.jpg">
-              </div>
-              <div class="card-content">
-                <h6>Womens Bat Shirt</h6>
-                <p>Price: $20.00</p>
-              </div>
-              <div class="card-action">
-                <button class="snipcart-add-item" data-item-id="2" data-item-name="Bat Shirt" data-item-price="20.00" data-item-custom2-name="Size" data-item-custom2-options="Small|Medium|Large" data-item-url="http://myapp.com/products/bacon" data-item-description="T-Shirt With Bats On It">
-        Buy
-</button>
-              </div>
-            </div>
-          </div>
-          <div class="col s6 m3">
-            <div class="card z-depth-5 hoverable">
-              <div class="card-image">
-                <img class="shopImage" src="images/shirt.jpg">
-              </div>
-              <div class="card-content">
-                <h6>Womens Bat Shirt</h6>
-                <p>Price: $20.00</p>
-              </div>
-              <div class="card-action">
-                <button class="snipcart-add-item" data-item-id="3" data-item-name="Bat Shirt" data-item-price="20.00" data-item-custom2-name="Size" data-item-custom2-options="Small|Medium|Large" data-item-url="http://myapp.com/products/bacon" data-item-description="T-Shirt With Bats On It">
-        Buy
-  </button>
-              </div>
-            </div>
-          </div>
+          <!--
           <div class="col s6 m3">
             <div class="card z-depth-5 hoverable">
               <div class="card-image">
@@ -271,7 +215,7 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">#austinbats</h5>
+            <h5 class="white-text">#batsATX</h5>
             <p class="grey-text text-lighten-4"></p>
           </div>
           <div class="col l4 offset-l2 s12">
