--- a/public/members.html
+++ b/public/members.html
@@ -46,7 +46,7 @@
         <h4 class="center-align white-text" id="headerSubText">Find out when and where to see the fameous bats in Austin, TX </h4>
       </div>
       <div class="six ">
-        <a class="waves-effect waves-light btn introButton z-depth-5" href="#signup">Join</a>
+        <a class="waves-effect waves-light btn introButton z-depth-5" href="#joinTarget">Join</a>
       </div>
       <div class="two">
         <canvas id="canvas1"></canvas>
@@ -208,6 +208,9 @@
           <br>
         </div>
       </div>
+    </div>
+    <div class="joinBox section scrollspy" id="joinTarget">
+
     </div>
 
 
