--- a/public/members.html
+++ b/public/members.html
@@ -8,7 +8,9 @@
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="css/styles.css">
   <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
-<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js" ></script>
+
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -54,21 +56,22 @@
 
     </div>
 
-
-
-  <div class="container section scrollspy orange z-depth-5" id="weather">
-    <div class="z-depth-5 weatherSubBox">
-      <h3 class="center" id="weatherHeader">Todays Estimated Flight Time</h3>
-      <p class="center" id="todaysFlight">calculated flight time here</p>
-
-  <div class="container  weatherBox section scrollspy orange" id="weather">
-    <div class="orange z-depth-5 weatherSubBox">
-      <h3 class="center orange" id="weatherHeader">Forecast</h3>
-      <p class="center" id="todaysFlight">Forecast for the next three days</p>
-
-      <h5 class="center">Weather</h5>
-      <div class="weatherTable">
-        <table class="centered black-text">
+    <div class="container weatherBox section scrollspy " id="weather">
+      <div class="z-depth-5 center orange weatherSubBox">
+        <div class="row">
+        <div class="col s12 m12 center">
+        <h3 class="center orange white-text" id="weatherHeader">Forecast</h3>
+        </div>
+        <div class="col s12 m4 push-m4">
+        <div class="teal" id = "subtract">
+          <p class="center white-text" id="todaysFlight">We are not experts, but experts say to arrive at least 45 minutes before sunset. Arive by: <h3 class="arriveEarly center red-text"> </h3></p>
+        </div>
+      </div>
+      <br>
+      <div class="col s12 m12">
+        <h5 class="center white-text">Weather</h5>
+      <div class=" teal weatherTable">
+        <table class="centered white-text">
           <thead>
             <tr>
               <th>Today</th>
@@ -99,10 +102,17 @@
               <td id="tomorrowInfo4"></td>
               <td id="twoDayInfo4"></td>
             </tr>
+            <tr>
+              <td class="summary" id="todayInfo5"></td>
+              <td class="summary" id="tomorrowInfo5"></td>
+              <td class="summary" id="twoDayInfo5"></td>
+            </tr>
           </tbody>
         </table>
       </div>
     </div>
+  </div>
+</div>
   </div>
 
   <div class="container z-depth-5 section scrollspy infoContainer" id="about">
