working on product.js

--- a/public/members.html
+++ b/public/members.html
@@ -46,20 +46,13 @@
         <h4 class="center-align white-text" id="headerSubText">Find out when and where to see the fameous bats in Austin, TX </h4>
       </div>
       <div class="six ">
-        <a class="waves-effect waves-light btn introButton z-depth-5" href="#signup">Join</a>
+        <a class="waves-effect waves-light btn introButton z-depth-5" href="../signup.html">Join</a>
       </div>
       <div class="two">
         <canvas id="canvas1"></canvas>
       </div>
 
     </div>
-
-
-
-  <div class="container section scrollspy orange z-depth-5" id="weather">
-    <div class="z-depth-5 weatherSubBox">
-      <h3 class="center" id="weatherHeader">Todays Estimated Flight Time</h3>
-      <p class="center" id="todaysFlight">calculated flight time here</p>
 
   <div class="container  weatherBox section scrollspy orange" id="weather">
     <div class="orange z-depth-5 weatherSubBox">
