--- a/public/members.html
+++ b/public/members.html
@@ -143,8 +143,8 @@
     </div>
   </div>
 
-  <div class="container orange shopContainer section scrollspy valign-wrapper" id="shop">
-    <div class="row products2">
+  <div class="container shopContainer section scrollspy valign-wrapper" id="shop">
+    <div class="row orange products2">
       <div class="col s12 m12">
         <h3 class="center white-text">Help Us Pay Rent!</h3>
       </div>
