--- a/public/members.html
+++ b/public/members.html
@@ -44,7 +44,7 @@
       <img class="batLogo" src="images/batsATXLogo.png" alt="">
     </div>
     <div class="four">
-      <h4 class="center-align white-text" id="headerSubText">Find out when and where to see the fameous bats in Austin, TX </h4>
+      <h4 class="center-align white-text" id="headerSubText">Find out when and where to see the famous bats in Austin, TX </h4>
     </div>
     <div class="six ">
       <a class="waves-effect waves-light btn introButton z-depth-5" href="#joinTarget">Join</a>
