signup db fixed

--- a/public/members.html
+++ b/public/members.html
@@ -218,7 +218,7 @@
               </div>
               <div style="display: none" id="alert" class="alert alert-danger" role="alert">
                 <i class="materials-icon" aria-hidden="true"></i>
-                <span class="sr-only">Error</span> <span class="msg"></span>
+                <span class="sr-only">Thank you for signing up!</span> <span class="msg"></span>
               </div>
               <button type="submit" class="btn btn-default">Sign Up</button>
             </form>
@@ -272,9 +272,9 @@
     $('.tap-target').tapTarget('open');
     $('.tap-target').tapTarget('close');
 
-    Snipcart.subscribe('order.completed', function(data) {
-      console.log(data);
-    });
+    // Snipcart.subscribe('order.completed', function(data) {
+    //   console.log(data);
+    // });
   </script>
 </body>
 
